--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AgroAI - Smart Farming Assistant</title>
+    <title>GreenHelper - Smart Farming Assistant</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
@@ -71,7 +71,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="/api/placeholder/40/40" alt="AgroAI Logo" class="me-2"> AgroAI
+                <img src="/api/placeholder/40/40" alt="GreenHelper Logo" class="me-2"> GreenHelper
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -104,7 +104,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <h1 class="display-4 fw-bold mb-3">Transform Your Farm with AI</h1>
-                        <p class="lead mb-4 opacity-75">AgroAI uses artificial intelligence to help farmers increase
+                        <p class="lead mb-4 opacity-75">GreenHelper uses artificial intelligence to help farmers increase
                             yields, reduce costs, and farm more sustainably.</p>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
                             <button type="button" class="btn btn-light btn-lg px-4 rounded-pill fw-bold text-success"
@@ -123,7 +123,7 @@
                 <div class="row justify-content-center text-center mb-5">
                     <div class="col-lg-8">
                         <h2 class="display-5 fw-bold text-success mb-3">Smart Farming Features</h2>
-                        <p class="lead text-muted">AgroAI provides a comprehensive set of tools to optimize your farming
+                        <p class="lead text-muted">GreenHelper provides a comprehensive set of tools to optimize your farming
                             operations.</p>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                             <div class="card-body p-4">
                                 <div class="feature-icon mb-3">🔊</div>
                                 <h3 class="h4 mb-3">Voice Support</h3>
-                                <p class="text-muted">Interact with AgroAI using voice commands in your local language.
+                                <p class="text-muted">Interact with GreenHelper using voice commands in your local language.
                                 </p>
                             </div>
                         </div>
@@ -198,13 +198,13 @@
                 <div class="row justify-content-center text-center mb-5">
                     <div class="col-lg-8">
                         <h2 class="display-5 fw-bold text-success mb-3">Your Farm at a Glance</h2>
-                        <p class="lead text-muted">AgroAI's intuitive dashboard gives you real-time insights into your
+                        <p class="lead text-muted">GreenHelper's intuitive dashboard gives you real-time insights into your
                             farm's performance.</p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
-                        <img src="/api/placeholder/800/450" alt="AgroAI Dashboard Preview"
+                        <img src="/api/placeholder/800/450" alt="GreenHelper Dashboard Preview"
                             class="img-fluid rounded shadow">
                     </div>
                 </div>
@@ -216,8 +216,8 @@
             <div class="container py-4">
                 <div class="row justify-content-center text-center mb-5">
                     <div class="col-lg-8">
-                        <h2 class="display-5 fw-bold text-success mb-3">How AgroAI Works</h2>
-                        <p class="lead text-muted">Getting started with AgroAI is simple and takes just minutes.</p>
+                        <h2 class="display-5 fw-bold text-success mb-3">How GreenHelper Works</h2>
+                        <p class="lead text-muted">Getting started with GreenHelper is simple and takes just minutes.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -267,7 +267,7 @@
                 <div class="row justify-content-center text-center mb-5">
                     <div class="col-lg-8">
                         <h2 class="display-5 fw-bold text-success mb-3">Success Stories</h2>
-                        <p class="lead text-muted">Hear from farmers who have transformed their operations with AgroAI.
+                        <p class="lead text-muted">Hear from farmers who have transformed their operations with GreenHelper.
                         </p>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                     <div class="col-md-4">
                         <div class="card h-100 border-0 shadow-sm">
                             <div class="card-body p-4">
-                                <p class="lead mb-4">"AgroAI helped me reduce water usage by 30% while increasing my
+                                <p class="lead mb-4">"GreenHelper helped me reduce water usage by 30% while increasing my
                                     corn yield by 15%. The pest detection feature alone saved me thousands last season."
                                 </p>
                                 <div class="d-flex align-items-center">
@@ -330,7 +330,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <h2 class="display-5 fw-bold mb-3">Ready to Transform Your Farm?</h2>
-                        <p class="lead mb-4 opacity-75">Join thousands of farmers who are using AgroAI to improve yields
+                        <p class="lead mb-4 opacity-75">Join thousands of farmers who are using GreenHelper to improve yields
                             and sustainability.</p>
                         <button class="btn btn-light btn-lg px-5 rounded-pill fw-bold text-success"
                             data-bs-toggle="modal" data-bs-target="#loginModal">Get Started</button>
@@ -345,7 +345,7 @@
         <div class="container">
             <div class="row g-4">
                 <div class="col-lg-4">
-                    <h4 class="h3 mb-4">AgroAI</h4>
+                    <h4 class="h3 mb-4">GreenHelper</h4>
                     <p class="text-muted mb-0">Empowering farmers with artificial intelligence for sustainable and
                         profitable agriculture.</p>
                 </div>
@@ -386,7 +386,7 @@
                 </div>
             </div>
             <div class="border-top border-secondary mt-4 pt-4 text-center text-muted">
-                <p class="small mb-0">&copy; 2025 AgroAI. All rights reserved.</p>
+                <p class="small mb-0">&copy; 2025 GreenHelper. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -396,7 +396,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header border-0">
-                    <h5 class="modal-title text-success fw-bold" id="loginModalLabel">Log In to AgroAI</h5>
+                    <h5 class="modal-title text-success fw-bold" id="loginModalLabel">Log In to GreenHelper</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -432,8 +432,8 @@
                         <div class="px-4 mb-4">
                             <a href="#" class="d-flex align-items-center text-decoration-none text-white"
                                 onclick="showMainContent()">
-                                <img src="/api/placeholder/40/40" alt="AgroAI Logo" class="me-2">
-                                <span class="fs-4 fw-bold">AgroAI</span>
+                                <img src="/api/placeholder/40/40" alt="GreenHelper Logo" class="me-2">
+                                <span class="fs-4 fw-bold">GreenHelper</span>
                             </a>
                         </div>
                         <ul class="nav flex-column mb-auto px-3">
