--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
                                 <div class="d-flex align-items-center">
                                     <img src="/api/placeholder/50/50" alt="Farmer Portrait" class="rounded-circle me-3">
                                     <div>
-                                        <h5 class="mb-1">John Martinez</h5>
-                                        <p class="text-muted small mb-0">Corn Farmer, Iowa</p>
+                                        <h5 class="mb-1">Suresh Hole</h5>
+                                        <p class="text-muted small mb-0">Corn Farmer, Madhya Pradesh</p>
                                     </div>
                                 </div>
                             </div>
@@ -335,8 +335,8 @@
                                 <div class="d-flex align-items-center">
                                     <img src="/api/placeholder/50/50" alt="Farmer Portrait" class="rounded-circle me-3">
                                     <div>
-                                        <h5 class="mb-1">Sarah Johnson</h5>
-                                        <p class="text-muted small mb-0">Wheat Farmer, Kansas</p>
+                                        <h5 class="mb-1">Jagdish Yadav</h5>
+                                        <p class="text-muted small mb-0">Wheat Farmer, Banaras</p>
                                     </div>
                                 </div>
                             </div>
@@ -351,8 +351,8 @@
                                 <div class="d-flex align-items-center">
                                     <img src="/api/placeholder/50/50" alt="Farmer Portrait" class="rounded-circle me-3">
                                     <div>
-                                        <h5 class="mb-1">Michael Lee</h5>
-                                        <p class="text-muted small mb-0">Organic Farmer, California</p>
+                                        <h5 class="mb-1">Mahesh Jadhav</h5>
+                                        <p class="text-muted small mb-0">Organic Farmer, Maharashtra</p>
                                     </div>
                                 </div>
                             </div>
