--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="/logo.webp" alt="GreenHelper Logo" width="40" height="40" class="me-2"> GreenHelper
+                <img src="/logo.png" alt="GreenHelper Logo" width="40" height="40" class="me-2"> GreenHelper
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -326,7 +326,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <!-- <div class="col-md-4">
                         <div class="card h-100 border-0 shadow-sm">
                             <div class="card-body p-4">
                                 <p class="lead mb-4">"The weather forecasting is incredibly accurate. I was able to
@@ -341,8 +341,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
+                    </div> -->
+                    <!-- <div class="col-md-4">
                         <div class="card h-100 border-0 shadow-sm">
                             <div class="card-body p-4">
                                 <p class="lead mb-4">"As a small-scale organic farmer, the disease detection has been
@@ -357,7 +357,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -471,7 +471,7 @@
                         <div class="px-4 mb-4">
                             <a href="#" class="d-flex align-items-center text-decoration-none text-white"
                                 onclick="showMainContent()">
-                                <img src="/logo.webp" alt="GreenHelper Logo" width="40" height="40" class="me-2">
+                                <img src="/logo.png" alt="GreenHelper Logo" width="40" height="40" class="me-2">
                                 <span class="fs-4 fw-bold">GreenHelper</span>
                             </a>
                         </div>
